--- a/main.html
+++ b/main.html
@@ -7,7 +7,13 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
+	<div>
+  My current favourite song is 
+  <a href="https://www.youtube.com/watch?v=YykjpeuMNEk" target="_blank">
+    Hymn for the Weekend
+  </a>
+</div>
+
     <script type="text/javascript" src="./script.js">
 </script>
 
